deploy/k8s/crate.yaml
kind: StatefulSet
apiVersion: "apps/v1"
metadata:
  name: crate
  namespace: scraty
spec:
  serviceName: crate
  replicas: 1
  selector:
    matchLabels:
      app: crate
  template:
    metadata:
      labels:
        app: crate
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      containers:
      - name: crate
        image: crate/crate:3.1.2
        command:
        - /docker-entrypoint.sh
        - -Cstats.enabled=true
        - -Ccluster.name=${CLUSTER_NAME}
        - -Cpath.data=/resource/${NAMESPACE}
        - -Clicense.enterprise=true
        - -Clicense.ident=836ddc69888dfe3b4de39023ce4df8bce3fa0163
        - -Cprocessors=1
        volumeMounts:
        - mountPath: /resource
          name: resource
        resources:
          limits:
            memory: 1Gi
            cpu: 1
        ports:
        - containerPort: 4200
          name: http
        - containerPort: 4300
          name: transport
        - containerPort: 5432
          name: postgres
      volumes:
      - name: resource
        persistentVolumeClaim:
          claimName: local-resource
